--- a/.zsh.mac.rc
+++ b/.zsh.mac.rc
@@ -27,3 +27,6 @@ case ":$PATH:" in
   *":$PNPM_HOME:"*) ;;
   *) export PATH="$PNPM_HOME:$PATH" ;;
 esac
+
+# !NOTE Language Setting
+export LANG="en_US@UTF-8"
